--- a/TodoListManager/AndroidManifest.xml
+++ b/TodoListManager/AndroidManifest.xml
@@ -6,22 +6,33 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="19" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name="il.ac.huji.todolist.TodoListManagerActivity"
             android:label="@string/app_name" >
+            
             <intent-filter>
+                
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+            
             </intent-filter>
+            
         </activity>
+        
+        <activity
+            android:name="il.ac.huji.todolist.AddNewTodoItemActivity"
+            android:label="@string/title_activity_add_new_todo_item"
+            android:theme="@android:style/Theme.Dialog" >
+        </activity>
+        
     </application>
 
 </manifest>
