--- a/TodoListManager/AndroidManifest.xml
+++ b/TodoListManager/AndroidManifest.xml
@@ -16,7 +16,8 @@
         
         <activity
             android:name="il.ac.huji.todolist.TodoListManagerActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize" >
             
             <intent-filter>
                 
