--- a/TodoListManager/bin/AndroidManifest.xml
+++ b/TodoListManager/bin/AndroidManifest.xml
@@ -7,9 +7,6 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
-
-    <uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     
     <application
         android:allowBackup="true"
@@ -19,9 +16,7 @@
         
         <activity
             android:name="il.ac.huji.todolist.TodoListManagerActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation|screenSize" >
-            
+            android:label="@string/app_name" >            
             <intent-filter>
                 
                 <action android:name="android.intent.action.MAIN" />
@@ -35,6 +30,7 @@
             android:name="il.ac.huji.todolist.AddNewTodoItemActivity"
             android:label="@string/title_activity_add_new_todo_item"
             android:theme="@android:style/Theme.Dialog" >
+            
         </activity>
         
     </application>
